atualização em funções
